Archive2/e5/f34aaf54dfd956/output
main.cpp:15:5: error: use of undeclared identifier 'swap'; did you mean 'std::swap'?
    swap(a, b);
    ^~~~
    std::swap
/usr/include/c++/v1/type_traits:3308:1: note: 'std::swap' declared here
swap(_Tp& __x, _Tp& __y) _NOEXCEPT_(is_nothrow_move_constructible<_Tp>::value &&
^
main.cpp:17:5: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
    cout << "A: " << a << endl;
    ^~~~
    std::cout
/usr/include/c++/v1/iostream:50:33: note: 'std::cout' declared here
extern _LIBCPP_FUNC_VIS ostream cout;
                                ^
main.cpp:17:27: error: use of undeclared identifier 'endl'; did you mean 'std::endl'?
    cout << "A: " << a << endl;
                          ^~~~
                          std::endl
/usr/include/c++/v1/ostream:1020:1: note: 'std::endl' declared here
endl(basic_ostream<_CharT, _Traits>& __os)
^
main.cpp:18:5: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
    cout << "B: " << b << endl;
    ^~~~
    std::cout
/usr/include/c++/v1/iostream:50:33: note: 'std::cout' declared here
extern _LIBCPP_FUNC_VIS ostream cout;
                                ^
main.cpp:18:27: error: use of undeclared identifier 'endl'; did you mean 'std::endl'?
    cout << "B: " << b << endl;
                          ^~~~
                          std::endl
/usr/include/c++/v1/ostream:1020:1: note: 'std::endl' declared here
endl(basic_ostream<_CharT, _Traits>& __os)
^
5 errors generated.
